more fixes to spacing

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -27,7 +27,8 @@
 
 .index-image {
 	float: left;
-	margin: 30px;
+	margin: 20px;
+	margin-bottom: 10px;
 	margin-top: 0;
 }
 
